# monitoring_of_accommodation_facilities

./: README.md  docker-compose.yml
parser/: Dockerfile  avito.py  main.py  pyproject.toml  services.csv
server/: Dockerfile  avito.db  database.py  dependencies.py  main.py  models.py  pyproject.toml  router.py  schemas.py
view/: Dockerfile  main.py  pyproject.toml
