[tool.poetry]
name = "view"
version = "0.1.0"
description = ""
authors = ["Ekaterina <108530800+piccolo-gatto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
requests = "^2.31.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
